--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
     "@expo/metro-runtime": "~3.2.3",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "bcryptjs": "^2.4.3",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.21.0",
+    "joi": "^17.13.3",
+    "joi-password": "^4.2.0",
+    "jshint": "^2.13.6",
+    "mongoose": "^8.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
