Get & Display user location for crime report

--- a/app.json
+++ b/app.json
@@ -13,6 +13,14 @@
     },
     "web": {
       
-    }
+    },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow GuardianBot to use your location."
+        }
+      ]
+    ]
   }
 }
