--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -16,8 +16,9 @@
     "@react-navigation/native-stack": "^6.11.0",
     "bcryptjs": "^2.4.3",
     "expo": "~51.0.28",
+    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "joi": "^17.13.3",
     "joi-password": "^4.2.0",
     "jshint": "^2.13.6",
@@ -25,13 +26,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-get-location": "^5.0.0",
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-navigation-header-buttons": "^12.0.1",
-    "expo-linear-gradient": "~13.0.2"
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
