--- a/package.json
+++ b/package.json
@@ -9,29 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "~4.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "bcryptjs": "^2.4.3",
-    "expo": "~51.0.38",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.5",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-status-bar": "~2.0.0",
     "express": "^4.21.0",
     "joi": "^17.13.3",
     "joi-password": "^4.2.0",
     "jshint": "^2.13.6",
     "mongoose": "^8.7.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-maps": "1.14.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-maps": "1.18.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.2",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-navigation-header-buttons": "^12.0.1"
   },
   "devDependencies": {
