Completed Guides section: - Finished the rest of the Guides and included videos, images, and a UNT PDF Guide link for further information on the guide.

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-PORT ='3000'
-IP = '108.69.196.217'
-DB_NAME = 'guardian_bot'
-DB_USER = 'redshadow'
-DB_PASSWORD = 'BY40HV308fdz6HGN'
+PORT ='YOUR_PORT'
+IP = 'YOUR_IP'
+DB_NAME = 'guardian_bot'   
+DB_USER = 'YOUR_USERNAME'
+DB_PASSWORD = 'YOUR_PASSWORD'
 CLUSTER = 'gb-usercluster'
