--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "config": "^3.3.12",
     "cors": "^2.8.5",
+    "expo-location": "^18.0.1",
     "lodash": "^4.17.21",
     "mongodb": "^6.9.0",
     "nodemon": "^3.1.7"
