--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "bcryptjs": "^2.4.3",
-    "expo": "^52.0.5",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-status-bar": "~2.0.0",
+    "expo": "~51.0.38",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
     "express": "^4.21.1",
     "joi": "^17.13.3",
     "joi-password": "^4.2.0",
     "jshint": "^2.13.6",
-    "mongoose": "^8.7.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
