--- a/app.json
+++ b/app.json
@@ -6,10 +6,11 @@
     "orientation": "portrait",
     "userInterfaceStyle": "light",
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "domains": ["*"]
     },
     "android": {
-      
+      "domains": ["*"]
     },
     "web": {
       
