--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "config": "^3.3.12",
-    "cors": "^2.8.5",
     "expo-location": "^18.0.1",
     "lodash": "^4.17.21",
     "mongodb": "^6.9.0",
+    "mongoose": "^8.8.2",
     "nodemon": "^3.1.7"
   }
 }
