--- a/package.json
+++ b/package.json
@@ -14,30 +14,34 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
-    "expo": "~51.0.38",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.8",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-location": "~18.0.2",
+    "expo-status-bar": "~2.0.0",
     "express": "^4.21.1",
+    "http-proxy-middleware": "^3.0.3",
     "joi": "^17.13.3",
     "joi-password": "^4.2.0",
     "jshint": "^2.13.6",
     "react": "18.3.1",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-get-location": "^5.0.0",
-    "react-native-maps": "1.14.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-maps": "1.18.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "react-navigation-header-buttons": "^12.0.1",
-    "expo-location": "~17.0.1"
+    "react-native-webview": "^13.12.4",
+    "react-navigation-header-buttons": "^12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "newArchEnabled": true
 }
