--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.76.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-get-location": "^5.0.0",
+    "react-native-gifted-chat": "^2.6.4",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
