--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "^52.0.8",
     "expo-linear-gradient": "~14.0.1",
     "expo-location": "~18.0.2",
+    "expo-speech": "^13.0.0",
     "expo-status-bar": "~2.0.0",
     "express": "^4.21.1",
     "http-proxy-middleware": "^3.0.3",
