--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-get-location": "^5.0.0",
     "react-native-gifted-chat": "^2.6.4",
     "react-native-maps": "1.18.0",
