Created Voice Report Page. Added back option so user isn't trapped in Anonymous and Voice report page. Voice report page displays profile details.

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-navigation-header-buttons": "^12.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "typescript": "^5.3.3"
   },
   "private": true,
   "newArchEnabled": true
