--- a/app.json
+++ b/app.json
@@ -8,18 +8,30 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "domains": ["*"],
+      "domains": [
+        "*"
+      ],
       "infoPlist": {
-        "NSMicrophoneUsageDescription": "This app uses text-to-speech features to read out content.",
-        "NSSpeechRecognitionUsageDescription": "This app uses speech features to improve user interaction."
+        "NSMicrophoneUsageDescription": "Allow GuardianBot to use the microphone.",
+        "NSSpeechRecognitionUsageDescription": "Allow GuardianBot to use speech recognition."
       }
     },
     "android": {
-      "domains": ["*"]
+      "domains": [
+        "*",
+        "*"
+      ],
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.anonymous.guardianbot"
     },
-    "web": {
-      
-    },
+    "web": {},
     "plugins": [
       [
         "expo-location",
