--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.12.4",
-    "react-navigation-header-buttons": "^12.0.1"
+    "react-navigation-header-buttons": "^12.0.1",
+    "expo-av": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
