--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "config": "^3.3.12",
     "expo-location": "^18.0.1",
     "lodash": "^4.17.21",
     "mongodb": "^6.9.0",
     "mongoose": "^8.8.2",
     "nodemon": "^3.1.7",
-    "ollama": "^0.5.10"
+    "ollama": "^0.5.10",
+    "react-native-webview": "^13.12.5"
   }
 }
