Fixed more Dependencies

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "expo": "^52.0.8",
+    "expo-av": "~15.0.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-location": "~18.0.2",
     "expo-speech": "^13.0.0",
@@ -40,8 +41,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.12.4",
-    "react-navigation-header-buttons": "^12.0.1",
-    "expo-av": "~15.0.1"
+    "react-navigation-header-buttons": "^12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
