--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.12.4",
     "react-navigation-header-buttons": "^12.0.1",
-    "expo-av": "~15.0.1"
+    "expo-av": "~15.0.1",
+    "expo-sms": "~13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
